--- a/Chap3-NEMOdetectors.tex
+++ b/Chap3-NEMOdetectors.tex
@@ -19,7 +19,7 @@
 \subsection{Principe}\label{sec:Principe}
 
 
-To directly detect the 2 electrons emitted in $\beta\beta$ decay, the $\beta\beta$ sources consist of thin foils placed at the center of the detector and surrounded by a tracking device for electron track reconstruction. The tracking volume is itself surrounded by a calorimeter for electron energy measurement. Figure~\ref{SchemaNEMOl} presents the detection principle of $\beta\beta$ event combining tracking and calorimetric measurement. This unique feature allow a full reconstruction of the different parameters of the events. The energy of each particle can be measured independently also as the angles between the particle tracks, which allows the discrimation between the processes behind $\beta\beta$ decay and a good background discrimination. Futhermore, this approach permits to search for the 0$\nu\beta\beta$ decays among several isotopes. 
+To directly detect the 2 electrons emitted in $\beta\beta$ decay, the $\beta\beta$ sources consist of thin foils placed at the center of the detector and surrounded by a tracking device for electron track reconstruction. The tracking volume is itself surrounded by a calorimeter for electron energy measurement. Figure~\ref{SchemaNEMOl} presents the detection principle of $\beta\beta$ event combining tracking and calorimetric measurements. This unique feature allow a full reconstruction of the different parameters of the events. The energy of each particle can be measured independently also as the angles between the particle tracks, which allows the discrimation between the processes behind $\beta\beta$ decay and a good background discrimination. Futhermore, this approach permits to search for the 0$\nu\beta\beta$ decays among several isotopes. 
 
 
 \begin{figure}[h!]
